@@ -288,7 +288,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
+          <!-- <argLine>-XX:+EnableDynamicAgentLoading</argLine> -->
         </configuration>
       </plugin>
       <plugin>
